tests/files/flow_controller_tests/should_run/070.cmdr
x = 6.28;
print cos(x);