tests/files/flow_controller_tests/should_fail/044.cmdr
x = "cat";
print cos(x);